# py_template

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
src/todo/: __init__.py  about.py
