[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "pyraid @ git+https://github.com/GlenNicholls/pyraid.git@main",
]
build-backend = "setuptools.build_meta"

[project]
name = "TODO"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = ["pyraid @ git+https://github.com/GlenNicholls/pyraid.git@main"]

[project.scripts]
parity_scripter = "TODO:main"

[tool.setuptools.dynamic]
version = {attr = "TODO.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
