[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "pyraid @ git+https://github.com/GlenNicholls/pyraid.git@main",
]
build-backend = "setuptools.build_meta"

[project]
name = "todo"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = ["pyraid @ git+https://github.com/GlenNicholls/pyraid.git@main"]

[project.scripts]
parity_scripter = "todo:main"

[tool.setuptools.dynamic]
version = {attr = "todo.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
